# CoinGeckoTestApi

./: .env.test  .gitignore  Cargo.toml  README.md  run_db.sh
db/migrations/: 20231006134239_initial-tables.sql
sql/: create_database.sql
src/: db_connections.rs  main.rs
src/processors/: api_loader.rs  mod.rs
src/schema/: health.rs  mod.rs
src/server/: mod.rs  routes.rs
