[package]
name = "coin_gecko_test_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "6.0.7"
async-graphql-warp = "6.0.7"
chrono = { version="0.4.31", features=["serde"] }
dotenv = "0.15.0"
log = "0.4.20"
pretty_env_logger = "0.5.0"
reqwest = { version="0.11.22",  features = ["json"] }
serde = "1.0.188"
serde_json = "1.0.107"
sqlx = { version = "0.7.2", default-features = false, features = [ "runtime-tokio", "macros", "postgres", "uuid", "chrono", "json", "migrate" ] }
tokio = { version="1.32.0", features=["macros", "rt-multi-thread"] }
warp = "0.3.6"

